// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container matches snapshot when passed the "fluid" prop 1`] = `
<div
  className="css-lur8ru"
/>
`;

exports[`Container matches snapshot when passed zero props 1`] = `
<div
  className="css-1s3f3t3"
/>
`;
